# sqlite_orm

./: .clang-format  .gitignore  CMakeLists.txt  Package.swift
cmake/: FindSQLite.cmake  FindSqlite.cmake
include/sqlite/: database.h
include/sqlite_orm/: aasset_vfs.h  base_database.h  commands.h  database.h
sqlite/: base_database.h  column.h  database.h
src/: CMakeLists.txt
src/include/sqlite_orm/: base_database.h  column.h
src/sqlite_orm/: aasset_vfs.cpp
tests/: CMakeLists.txt  test_cache_cleaning.cpp  test_commands.cpp  test_empty_string.cpp  test_ensure_fields.cpp  test_error.cpp  test_getters.cpp  test_input.cpp  test_insert.cpp  test_locks.cpp  test_multiple_commands.cpp
tests_android/: CMakeLists.txt  build.gradle  settings.gradle
tests_android/app/: build.gradle
tests_android/app/src/androidTest/java/com/ondesly/sqliteormtest/: ExampleInstrumentedTest.java
tests_android/app/src/main/: AndroidManifest.xml
tests_android/app/src/main/assets/: test.db
tests_android/app/src/main/cpp/: main.cpp
tests_android/app/src/main/java/com/ondesly/sqliteormtest/: MainActivity.java
tests_android/app/src/main/res/values/: strings.xml  themes.xml
tests_android/app/src/main/res/values-night/: themes.xml
tests_android/gradle/wrapper/: gradle-wrapper.properties
